# automatica_project

./: README.md  pyproject.toml
src/: .env.example
src/api/: serializers.py  urls.py  views.py
src/config/: settings.py
src/visit_app/: admin.py  authentication.py  models.py
src/visit_app/migrations/: 0001_initial.py  0002_auto_add_test_data.py
